cloud-infra-macros/tests/fails/message_retention_period_boundary_low.rs
use cloud_infra_macros::message_retention_period;

fn example() {
    let period = message_retention_period!(59);
}

fn main() {}