cloud-infra-macros/tests/fails/message_retention_period_boundary_low.stderr
error: proc macro panicked
 --> tests/fails/message_retention_period_boundary_low.rs:4:18
  |
4 |     let period = message_retention_period!(59);
  |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: value should be at least 60
